--- a/app/index.html
+++ b/app/index.html
@@ -675,10 +675,60 @@
     </section>
 
 
+    <!-- section -->
+
+    <section class="section-page section-page--bg">
+      <div class="section-page__wrap-title">
+        <div class="section-title section-title--bg">
+          <div class="container">
+            <h2 class="section-title__inner">– Розничный бизнес –</h2>
+          </div>
+        </div>
+      </div>
+
+      <div class="section-page_content">
+        <div class="container">
+
+          <div class="section-page__wrap-description">
+            <div class="section-description">
+              <p>
+                2015 год для розничного бизнеса МТБанка выдался особенно продуктивным. Динамично развивалась карта рассрочки «Халва», также на рынок вышли такие инновационные продукты, как «Халва Плюс», PayOkay и «Автокарта». 
+              </p>
+            </div>
+          </div>
+
+          <div class="tabs">
+            <ul class="tabs__caption clearfix">
+              <li class="tabs-item tabs-item--сol4 active">халва</li>
+              <li class="tabs-item tabs-item--col5">халва плюс</li>
+              <li class="tabs-item tabs-item--сol6">pay okay</li>
+              <li class="tabs-item tabs-item--сol7">автокарта</li>
+              <li class="tabs-item tabs-item--сol8">Акции</li>
+            </ul>
+            <div class="tabs__inner">
+
+              <div class="tabs__content active">
+                  adfdghgj
+              </div>
+              <div class="tabs__content">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, quod.
+              </div>
+              <div class="tabs__content">
+                  adfdghgj
+              </div>
+              <div class="tabs__content">
+                  3456
+              </div>
+              <div class="tabs__content">
+                  adfdghgj
+              </div>
 
 
-    <section class="main-page__section">
-      
+            </div>
+          </div>
+
+        </div>
+      </div>
     </section>
   </div>
   <!--build:js js/vendor.min.js -->
