fixed bugs in footer 'read' and slider draggable + select text

--- a/app/index.html
+++ b/app/index.html
@@ -19,15 +19,6 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- endbuild -->
   <style type="text/css">
-    html, body {
-      margin: 0;
-      padding: 0;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
     .slider {
         margin-top: 25px;
         /*width: 260px;*/
@@ -634,7 +625,7 @@
                       <div class="grid-sl__item">
                         <div class="sl-item sl-item--green">
                           <div class="sl-item__l">
-                            <img src="img/photo/1.2.1.jpg" alt="">
+                            <img src="img/photo/1.3.1.jpg" alt="">
                           </div>
                           <div class="sl-item__r">
                             <div class="sl-item__title">МТБанк в Skype и Viber</div>
@@ -749,6 +740,7 @@
        adaptiveHeight: true,
        cssEase: 'linear',
        fade: true,
+       draggable: false
       });
       $(".center").slick({
         dots: true,
