--- a/app/index.html
+++ b/app/index.html
@@ -944,7 +944,7 @@
                                 <img src="img/photo/2.3.jpg" alt="">
                               </div>
                               <div class="sl-item__r">
-                                <div class="sl-item__title">СуперМама 2015</div>
+                                <div class="sl-item__title"><a href="https://www.mtbank.by/about/newspage/supermama-2015-planirovanie-semejnogo">СуперМама 2015</a></div>
                                 <div class="sl-item__description">
                                   <section class="regular slider">
                                     <div>
@@ -967,7 +967,7 @@
                               </div>
                               <div class="sl-item__r">
                                 <div class="sl-item__title">
-                                  ХАЛВА С ОРЕХАМИ
+                                  <a href="https://www.mtbank.by/about/newspage/halva-s-orehami">ХАЛВА С ОРЕХАМИ</a>
                                 </div>
                                 <div class="sl-item__description">
                                   <section class="regular slider">
@@ -998,7 +998,7 @@
                               </div>
                               <div class="sl-item__r">
                                 <div class="sl-item__title">
-                                  Собирайтесь в школу с «ХАЛВОЙ» 
+                                  <a href="https://www.mtbank.by/about/newspage/halva-school">Собирайтесь в школу с «ХАЛВОЙ»</a>
                                 </div>
                                 <div class="sl-item__description">
                                   <section class="regular slider">
@@ -1029,7 +1029,7 @@
                               </div>
                               <div class="sl-item__r">
                                 <div class="sl-item__title">
-                                  День Халвы
+                                  <a href="https://www.mtbank.by/about/newspage/khalva_day_september">День Халвы</a>
                                 </div>
                                 <div class="sl-item__description">
                                   <section class="regular slider">
