new marker for charts

--- a/app/index.html
+++ b/app/index.html
@@ -50,12 +50,11 @@
             "allLabels": [],
             "balloon": {},
             "legend": {
-              "enabled": true,
-              "align": "center",
-              "labelWidth": 320,
-              "markerType": "circle",
-              "valueText": ""
-            },
+                "enabled": true,
+                "align": "left",
+                "markerType": "square",
+                "valueText": ""
+              },
             "titles": [
               {
                 "id": "Title-1",
@@ -98,9 +97,8 @@
                 "balloon": {},
                 "legend": {
                   "enabled": true,
-                  "align": "center",
-                  "labelWidth": 320,
-                  "markerType": "circle",
+                  "align": "left",
+                  "markerType": "square",
                   "valueText": ""
                 },
                 "titles": [
@@ -153,9 +151,8 @@
                 "balloon": {},
                 "legend": {
                   "enabled": true,
-                  "align": "center",
-                  "labelWidth": 320,
-                  "markerType": "circle",
+                  "align": "left",
+                  "markerType": "square",
                   "valueText": ""
                 },
                 "titles": [
@@ -208,9 +205,8 @@
                 "balloon": {},
                 "legend": {
                   "enabled": true,
-                  "align": "center",
-                  "labelWidth": 320,
-                  "markerType": "circle",
+                  "align": "left",
+                  "markerType": "square",
                   "valueText": ""
                 },
                 "titles": [
@@ -263,9 +259,8 @@
                 "balloon": {},
                 "legend": {
                   "enabled": true,
-                  "align": "center",
-                  "labelWidth": 320,
-                  "markerType": "circle",
+                  "align": "left",
+                  "markerType": "square",
                   "valueText": "",
                   "maxColumns": 1
                 },
@@ -315,9 +310,8 @@
                 "balloon": {},
                 "legend": {
                   "enabled": true,
-                  "align": "center",
-                  "labelWidth": 320,
-                  "markerType": "circle",
+                  "align": "left",
+                  "markerType": "square",
                   "valueText": "",
                   "maxColumns": 1
                 },
