--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
           {
             "type": "pie",
             "balloonText": "[[title]]<br><span style='font-size:14px'><b>[[value]]</b> ([[percents]]%)</span>",
-            "labelText": " [[percents]]%",
+            "labelText": "[[value]] ",
             "titleField": "category",
             "valueField": "column-1",
             "theme": "light",
@@ -94,7 +94,7 @@
                 "type": "pie",
                 "balloonText": "[[title]]<br><span style='font-size:14px'><b>[[value]]</b> ([[percents]]%)</span>",
                 "labelRadius": 1,
-                "labelText": " [[percents]]%",
+                "labelText": "[[value]] ",
                 "titleField": "category",
                 "valueField": "column-1",
                 "theme": "light",
@@ -140,7 +140,7 @@
                 "type": "pie",
                 "balloonText": "[[title]]<br><span style='font-size:14px'><b>[[value]]</b> ([[percents]]%)</span>",
                 "labelRadius": 1,
-                "labelText": " [[percents]]%",
+                "labelText": "[[value]] ",
                 "colors": [
                   "#3680be",
                   "#cdcdcd",
@@ -186,7 +186,7 @@
                 "type": "pie",
                 "balloonText": "[[title]]<br><span style='font-size:14px'><b>[[value]]</b> ([[percents]]%)</span>",
                 "labelRadius": 1,
-                "labelText": " [[percents]]%",
+                "labelText": "[[value]] ",
                 "colors": [
                   "#3680be",
                   "#cdcdcd",
@@ -232,7 +232,7 @@
                 "type": "pie",
                 "balloonText": "[[title]]<br><span style='font-size:14px'><b>[[value]]</b> ([[percents]]%)</span>",
                 "labelRadius": 1,
-                "labelText": " [[percents]]%",
+                "labelText": "[[value]] ",
                 "colors": [
                   "#3680be",
                   "#cdcdcd",
@@ -275,7 +275,7 @@
                 "type": "pie",
                 "balloonText": "[[title]]<br><span style='font-size:14px'><b>[[value]]</b> ([[percents]]%)</span>",
                 "labelRadius": 1,
-                "labelText": " [[percents]]%",
+                "labelText": "[[value]] ",
                 "colors": [
                   "#3680be",
                   "#cdcdcd",
