--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,9 @@
   <!-- build:css css/vendor.min.css -->
   <!-- bower:css -->
   <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css" />
+  <!-- endbower -->
   <link rel="stylesheet" type="text/css" href="css/slick.css">
   <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
-  <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css css/main.min.css -->
   <link rel="stylesheet" href="css/main.css">
@@ -1729,19 +1729,18 @@
   <!--build:js js/vendor.min.js -->
   <!-- bower:js -->
   <script src="../bower_components/jquery/jquery.js"></script>
-  <script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
+  <!-- endbower -->
   <script type="text/javascript" src="js/amcharts.js"></script>
   <script type="text/javascript" src="js/pie.js"></script>
   <script type="text/javascript" src="js/light.js"></script>
   <script type="text/javascript" src="js/serial.js"></script>
-  <!-- endbower -->
+  <script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
   <!-- endbuild -->
   <!--build:js js/main.min.js -->
   <script src="js/common.js"></script>
-  <script src="js/main-charts.js"></script>
-  <!-- endbuild -->
-  <!-- amCharts javascript sources -->
+  <script type="text/javascript" src="js/main-charts.js"></script>
 
-  <!-- amCharts javascript code -->
+  <!-- endbuild -->
+
 </body>
 </html>
