corporate section finish

--- a/app/index.html
+++ b/app/index.html
@@ -323,7 +323,7 @@
                                 <p>Студенты экономического профиля участвуют в чемпионатах по решению бизнес-кейсов и таким образом получают  опыт взаимодействия с реальным бизнесом, а также выигрывают призы. </p>
                               </div>
                               <div>
-                                <p>Компания А-100 стала партнером Кейс-чемпионата 2015 </p>
+                                <p>Компания А-100 стала партнером<br> Кейс-чемпионата 2015 </p>
                               </div>
                               <div>
                                 <p>Организована вторая «Бизнес-Неделя» – цикл лекций для студентов от ТОП-менеджеров ведущих компаний страны (МТБанк, СофтКлуб, ЗубрКапитал, А-100, TYT.BY, EnterInvest и др.)</p>
@@ -1191,7 +1191,7 @@
                         </p>
                       </div>
                     </div>
-                    <div class="section-info__right">
+                    <div class="section-info__right section-info-custom-r">
                       <img src="img/photo/logo-korp5.jpg" alt="">
                     </div>
                   </div>
@@ -1398,7 +1398,7 @@
                     
                     <div class="grid-sl__item">
                       <div class="sl-item">
-                        <div class="sl-item__l">
+                        <div class="sl-item__l sl-item-l__custom">
                           <img src="img/photo/3.2.jpg" alt="">
                         </div>
                         <div class="sl-item__r">
@@ -1448,7 +1448,7 @@
                   <div class="corporate__middle">
                    <div class="columns">
                     <div class="columns__row">
-                      <div class="columns__col">
+                      <div class="columns__col columns-custom-col">
                         <div class="columns__icon">
                         <img src="img/svg/icon-k-1.9.2.svg" alt="">
                         </div>
@@ -1459,7 +1459,7 @@
                         </div>
                       </div>
 
-                      <div class="columns__col">
+                      <div class="columns__col columns-custom-col">
                         <div class="columns__icon">
                         <img src="img/svg/icon-k-1.1.svg" alt="">
                         </div>
@@ -1471,7 +1471,7 @@
                         </div>
                       </div>
 
-                      <div class="columns__col">
+                      <div class="columns__col columns-custom-col">
                         <div class="columns__icon">
                         <img src="img/svg/icon-k-1.6.svg" alt="">
                         </div>
@@ -1569,8 +1569,176 @@
               </div>
               </div>
             </div>
-            <div class="tabs__content">hkljk</div>
-            <div class="tabs__content">zxcxc</div>
+            <div class="tabs__content">
+              <div class="corporate">
+                <div class="container-inner">
+
+                  <div class="corporate-sec">
+                    <div class="corporate__top">
+                      <div class="section-info">
+                        <div class="section-info__left">
+                          <h3 class="section-info-title section-info-title--c2">«Бизнес в стиле FLEX» – образовательный проект <br>для корпоративных клиентов</h3>
+                          <div class="section-info__text">
+                            <p>
+                              В 2015 году было организовано 4 бизнес-семинара по актуальным темам с ведущими экспертами, которые завершились торжественной церемонией «Клиент года». 
+                            </p>
+                            <p class="section-info__container-link">
+                              <a href="" class="section-info__link">«Плохие долги. Советы юристов»</a>,   <a href="" class="section-info__link">«Работа финансовых директоров в кризис»</a>,
+                              <a href="" class="section-info__link">«Эффективные IT-решения»,</a>   <a href="" class="section-info__link">«Интернет-маркетинг»</a>
+                            </p>
+                            <p>
+                            <span class="regular__title">За время существования проекта:</span>
+                            </p>
+                          </div>
+                        </div>
+                        <div class="section-info__right">
+                          <img src="img/photo/logo-korp10.jpg" alt="">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="corporate__middle">
+                     <div class="columns">
+                      <div class="columns__row">
+                        <div class="columns__col columns-custom-col">
+                          <div class="columns__icon">
+                          <img src="img/svg/icon-k-2.1.svg" alt="">
+                          </div>
+                          <div class="columns__title columns__title-c1">21</div>
+                          <div class="columns__description">
+                            Клиенту открывается
+                            кредитная линия
+                            в МТБанке
+                          </div>
+                        </div>
+
+                        <div class="columns__col columns-custom-col">
+                          <div class="columns__icon">
+                          <img src="img/svg/icon-people3.svg" alt="">
+                          </div>
+                          <div class="columns__title columns__title-c1">2000</div>
+                          <div class="columns__description">
+                            Клиент оплачивает товар/услугу
+                            у организации-партнера за счет кредитной линии МТБанка
+                          </div>
+                        </div>
+
+                        <div class="columns__col columns-custom-col">
+                          <div class="columns__icon">
+                          <img src="img/svg/icon-k-1.8.2.svg" alt="">
+                          </div>
+                          <div class="columns__title columns__title-c1"> > 50</div>
+                          <div class="columns__description">
+                            Клиент получает
+                            оплаченный товар/услугу
+                             у организации-партнера
+                          </div>
+                        </div>
+
+                      </div>
+                     </div>
+                    </div>
+                    <div class="corporate__bottom">
+                      <div class="corporate-subtitle"><span class="regular__title">У нас выступали:</span> И.Манн, А. Фридман, М. Кристал,  М. Батырев, Д. Исмагулов , А. Паньков и др.</div>
+                    </div>
+                  </div>
+
+
+                  <div class="corporate-sec corporate-sec--two">
+                    <div class="section-info section-info--two">
+                      <div class="section-info__left">
+                        <h3 class="section-info-title section-info-title--c2">
+                        ВстречА Про Бизнес
+                        </h3>
+                        <div class="section-info__text">
+                          <p>
+                            МТБанк является генеральным партнером Встреч Про бизнес. Встречи Про бизнес – <br> это реальные примеры успешных бизнес-проектов, кейсы от лучших владельцев и руководителей бизнеса 
+                          </p>
+                          <p>
+                          <span class="regular__title">Каждый спикер Встречи Про бизнес. был по своему интересен.<br> Приняли участие:</span>
+                            Аркадий Добкин, Олег Хусаенов, Алексей Жуков, Сергей Савицкий,
+                            Валентин Байко, Сергей Левин и др.
+                          </p>
+                        </div>
+                      </div>
+                      <div class="section-info__right section-info-custom-r">
+                        <img src="img/photo/logo-korp11.jpg" alt="">
+                      </div>
+                    </div>
+
+                    <div class="corporate__middle">
+                     <div class="columns">
+                      <div class="columns__row">
+                        <div class="columns__col columns-custom-col">
+                          <div class="columns__icon">
+                          <img src="img/svg/icon-k-2.2.svg" alt="">
+                          </div>
+                          <div class="columns__title columns__title-c1">12</div>
+                          <div class="columns__description">
+                            12 встреч за год 
+                          </div>
+                        </div>
+
+                        <div class="columns__col columns-custom-col">
+                          <div class="columns__icon">
+                          <img src="img/svg/icon-people3.svg" alt="">
+                          </div>
+                          <div class="columns__title columns__title-c1">2400</div>
+                          <div class="columns__description">
+                            Более 2400 участников за 2015 год
+                          </div>
+                        </div>
+
+                        <div class="columns__col columns-custom-col">
+                          <div class="columns__icon">
+                          <img src="img/svg/icon-k-2.3.svg" alt="">
+                          </div>
+                          <div class="columns__title columns__title-c1">1500</div>
+                          <div class="columns__description">
+                            1500 минут горячих обсуждений  актуальных тем для бизнеса
+                          </div>
+                        </div>
+
+                      </div>
+                     </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <!-- tabs_content -->
+            <div class="tabs__content">
+              <div class="corporate">
+                <div class="container-inner">
+                  <div class="corporate-sec">
+                    <div class="corporate__top">
+                      <div class="section-info section-info--three">
+                        <div class="section-info__left">
+                          <h3 class="section-info-title section-info-title--c3">«Бизнес в стиле FLEX» – образовательный проект <br>для корпоративных клиентов</h3>
+                          <div class="section-info__text">
+                            <p>
+                              Белорусский Банк Развития признал МТБанк лидером в поддержке малого бизнеса.
+                            </p>
+                            <p>
+                              На Всемирной неделе предпринимательства Банк развития вручил МТБанку Диплом в номинации
+                              «Самый динамичный рост в поддержке малого и среднего предпринимательства».
+                            </p>
+                          </div>
+                        </div>
+                        <div class="section-info__right">
+                          <img src="img/photo/logo-korp12.jpg" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+
+
+
+
+                </div>
+              </div>
+            </div>
             </div>
           </div>
         </div> <!-- container -->
