--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
       <div class="container">
       <div class="header-page__nav-bar">
         <div class="header-page__logo">
-          <a href="/" class="logo">
+          <a href="#" class="logo">
           <img src="img/svg/logo.svg" alt="">
           </a>
         </div>
@@ -745,7 +745,7 @@
                     <div class="retail">
                       <div class="retail__top">
                         <div class="retail__l">
-                          <h3 class="retail-title retail-title--c2"><a href="https://www.halva.by" target="_blank">БОнусная КАРТА «Халва плюс»</a></h3>
+                          <h3 class="retail-title retail-title--c2"><a href="https://www.halva.by/halva_plus/" target="_blank">БОнусная КАРТА «Халва плюс»</a></h3>
                           <div class="retail__text">
                           <p>
                             Халва Плюс – бонусная карта, позволяющая получить возврат средств бонусными
@@ -895,7 +895,7 @@
                                   <section class="regular slider">
                                     <div>
                                       <p>
-                                      Акция, которая в преддверии празднования Нового года.
+                                      Акция в преддверии празднования Нового года.
                                       </p>
                                       <p>
                                         При оформлении карты  PayOkay клиенты могли создать собственную открытку с персональным поздравлением для друзей и близких.<br> В результате была сгенерирована<br> 1521 открытка.
@@ -941,7 +941,7 @@
                                 <img src="img/photo/2.3.jpg" alt="">
                               </div>
                               <div class="sl-item__r">
-                                <div class="sl-item__title"><a href="https://www.mtbank.by/about/newspage/supermama-2015-planirovanie-semejnogo">СуперМама 2015</a></div>
+                                <div class="sl-item__title"><a href="https://www.mtbank.by/about/newspage/supermama-2015-planirovanie-semejnogo" target="_blank">СуперМама 2015</a></div>
                                 <div class="sl-item__description">
                                   <section class="regular slider">
                                     <div>
@@ -964,7 +964,7 @@
                               </div>
                               <div class="sl-item__r">
                                 <div class="sl-item__title">
-                                  <a href="https://www.mtbank.by/about/newspage/halva-s-orehami">ХАЛВА С ОРЕХАМИ</a>
+                                  <a href="https://www.mtbank.by/about/newspage/halva-s-orehami" target="_blank">ХАЛВА С ОРЕХАМИ</a>
                                 </div>
                                 <div class="sl-item__description">
                                   <section class="regular slider">
@@ -995,7 +995,7 @@
                               </div>
                               <div class="sl-item__r">
                                 <div class="sl-item__title">
-                                  <a href="https://www.mtbank.by/about/newspage/halva-school">Собирайтесь в школу с «ХАЛВОЙ»</a>
+                                  <a href="https://www.mtbank.by/about/newspage/halva-school" target="_blank">Собирайтесь в школу с «ХАЛВОЙ»</a>
                                 </div>
                                 <div class="sl-item__description">
                                   <section class="regular slider">
@@ -1026,7 +1026,7 @@
                               </div>
                               <div class="sl-item__r">
                                 <div class="sl-item__title">
-                                  <a href="https://www.mtbank.by/about/newspage/khalva_day_september">День Халвы</a>
+                                  <a href="https://www.mtbank.by/about/newspage/khalva_day_september" target="_blank">День Халвы</a>
                                 </div>
                                 <div class="sl-item__description">
                                   <section class="regular slider">
@@ -1112,7 +1112,7 @@
                         </div>
                       </div>
                       <div class="section-info__right">
-                        <img src="img/photo/korpo1.1.jpg" alt="">
+                        <img src="img/photo/korpo1.1v.jpg" width="350" alt="">
                       </div>
                     </div>
                   </div>
@@ -1493,7 +1493,7 @@
                   <div class="section-info section-info--three">
                     <div class="section-info__left">
                       <h3 class="section-info-title section-info-title--c1">
-                        Программа лояльности
+                        <a href="http://loyalty.mtbank.by/" target="_blank">Программа лояльности</a>
                       </h3>
                       <div class="section-info__text">
                         <p>
@@ -1651,7 +1651,8 @@
                         </h3>
                         <div class="section-info__text">
                           <p>
-                            МТБанк является генеральным партнером Встреч Про бизнес. Встречи Про бизнес – <br> это реальные примеры успешных бизнес-проектов, кейсы от лучших владельцев и руководителей бизнеса 
+                            МТБанк является генеральным партнером Встреч Про бизнес. Встречи Про бизнес. <br> – 
+                            это реальные примеры успешных бизнес-проектов, кейсы от лучших владельцев и руководителей бизнеса 
                           </p>
                           <p>
                           <span class="regular__title">Каждый спикер Встречи Про бизнес. был по своему интересен.<br> Приняли участие:</span>
@@ -1792,8 +1793,8 @@
               </div>
 
               <div class="interbank-row interbank-row--l">
-                <img src="img/photo/Interbank-img3.jpg" alt="" class="interbank-row__img">
-                <div class="interbank-row__text">
+                <img src="img/photo/Interbank-img5.jpg" width="235" alt="" class="interbank-row__img">
+                <div class="interbank-row__text interbank-row-text-custom">
                   <p>
                     МТБанк и Немецкий инвестиционный фонд IIV Mikrofinanzfonds подписали кредитное соглашение на сумму 8 млн. EUR для кредитования микро и малого  бизнеса, а также индивидуальных предпринимателей, которые ведут свою деятельность в различных сферах бизнеса Беларуси.<br>
                     <a href="https://www.mtbank.by/about/newspage/mtbanku-vydelena-kreditnaja-linija" target="_blank">Подробнее...</a>
