--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,19 @@
   <!-- build:css css/main.min.css -->
   <link rel="stylesheet" href="css/main.css">
   <!-- endbuild -->
+  <style>
+    @import url(http://fonts.googleapis.com/css?family=Lobster);
 
+    #chartdiv {
+        width   : 100%;
+        height  : 500px;
+    }
+
+    .amcharts-map-image-label tspan {
+      font-family: Lobster;
+      font-size: 15px!important;
+    }
+  </style>
 </head>
 <body>
   <header class="header-page">
@@ -1290,7 +1302,82 @@
                    </div>
                   </div>
                 </div>
+                <!-- corep-sec -->
+                <div class="corporate-sec corporate-sec--two">
+                  <div class="section-info section-info--two">
+                    <div class="section-info__left">
+                      <h3 class="section-info-title section-info-title--c1">
+                        <a href="https://www.mtbank.by/smallbusiness/lending/~show/skp" target="_blank">Совместные программы финансирования </a>
+                      </h3>
+                      <div class="section-info__text">
+                        <p>
+                          Партнерские программы  - это возможность для бизнеса приобрести транспорт, недвижимость или оборудование на специальных условиях
+                        </p>
+                        <div class="wrap-btn-corpo">
+                          <a href="https://www.mtbank.by/smallbusiness/molotok/catalog_of_partners " target="_blank" class="btn-corpo">Перейти к каталогу партнеров</a>
+                        </div>
+                        <p>
+                          <span class="regular__title">В 2015 году: </span>
+                        </p>
+                      </div>
+                    </div>
+                    <div class="section-info__right">
+                      <img src="img/photo/logo-korp7.jpg" alt="">
+                    </div>
+                  </div>
 
+                  <div class="corporate__middle">
+                   <div class="columns">
+                    <div class="columns__row">
+                      <div class="columns__col">
+                        <div class="columns__icon">
+                        <img src="img/svg/icon-k-1.1.svg" alt="">
+                        </div>
+                        <div class="columns__description">
+                          Выдано 133 лизинга
+                          на сумму финансирования
+                          около 5 130 000 USD
+                        </div>
+                      </div>
+
+                      <div class="columns__col">
+                        <div class="columns__icon">
+                        <img src="img/svg/icon-k-1.8.svg" alt="">
+                        </div>
+                        <div class="columns__description">
+                          Партнерами программы являются все основные автомобильные бренды
+                        </div>
+                      </div>
+
+                      <div class="columns__col">
+                        <div class="columns__icon">
+                        <img src="img/svg/icon-k-1.9.svg" alt="">
+                        </div>
+                        <div class="columns__description">
+                          Приобретен для передачи
+                          в лизинг новый автомобиль
+                          Land Rover 2015 года
+                          стоимостью<br> 129 600 USD
+                        </div>
+                      </div>
+
+                      <div class="columns__col">
+                        <div class="columns__icon">
+                        <img src="img/svg/icon-k-1.9.1.svg" alt="">
+                        </div>
+                        <div class="columns__description">
+                          Заключена первая сделка
+                          с дилерами РФ и привезен первый Мерседес (авто в лизинг из России по российским ценам)
+                        </div>
+                      </div>
+
+                    </div>
+                   </div>
+                  </div>
+
+                </div>
+                  
+                <!-- corp-sec -->
                 <div class="corporate-sec corporate-sec--two">
                   <div class="section-info section-info--two">
                     <div class="section-info__left">
