--- a/app/index.html
+++ b/app/index.html
@@ -831,7 +831,7 @@
                         <div class="col-tr">
                           <div class="col-tr__icon"><img src="img/svg/icon-fl.svg" alt=""></div>
                           
-                          <div class="col-tr__numb col-tr-title--c3">2 000 000 000</div>
+                          <div class="col-tr__numb col-tr-title--c3">2 000 000</div>
                           <p class="col-tr__text">
                             Самая большая сумма
                             cashback  за месяц на одного клиента составила
@@ -1340,7 +1340,7 @@
                         </div>
                         <div class="fin-feature__l">
                           <div class="fin-feature__title">ТРАНСПОРТ</div>
-                          <a href="#" class="fin-feature__link">Перейти к каталогу партнеров</a>
+                          <a href="https://www.mtbank.by/smallbusiness/lending/skp/transport" target="_blank" class="fin-feature__link">Перейти к каталогу партнеров</a>
                         </div>
                       </li>
 
@@ -1350,7 +1350,7 @@
                         </div>
                         <div class="fin-feature__l">
                           <div class="fin-feature__title">НЕДВИЖИМОСТЬ</div>
-                          <a href="#" class="fin-feature__link">Перейти к каталогу партнеров</a>
+                          <a href="https://www.mtbank.by/smallbusiness/lending/skp/nedvizhimost" target="_blank" class="fin-feature__link">Перейти к каталогу партнеров</a>
                         </div>
                       </li>
 
@@ -1360,7 +1360,7 @@
                         </div>
                         <div class="fin-feature__l">
                           <div class="fin-feature__title">ОБОРУДОВАНИЕ</div>
-                          <a href="#" class="fin-feature__link">Перейти к каталогу партнеров</a>
+                          <a href="https://www.mtbank.by/smallbusiness/lending/skp/oborudovanie" target="_blank" class="fin-feature__link">Перейти к каталогу партнеров</a>
                         </div>
                       </li>
                     </ul>
@@ -1883,7 +1883,7 @@
                 <div class="interbank-row__text">
                   <p>
                     МТБанк получил звание лучшего белорусского банка, став обладателем Гран-при премии «Банк года-2015» по версии  MYFIN.BY, а также получил 7 наград разного достоинства из 11 возможных. Среди них 4 первых места – в номинациях «Кредитор года», «Кредитный продукт», «Банк за безнал» и «Карта рассрочки». Также в активе банка 3 вторых позиции – в номинациях «Депозит», «Банк для бизнеса» и «Банковский сервис». <br>
-                    <a href="https://www.mtbank.by/about/newspage/mtbank-priznali-luchshim-bankom" target="_blank">Подробнее...</a>
+                    <a href="https://www.mtbank.by/about/newspage/belorusskij-bank-razvitija-priznal" target="_blank">Подробнее...</a>
                   </p>
                 </div>
               </div>
