--- a/app/index.html
+++ b/app/index.html
@@ -951,7 +951,7 @@
                                     <div>
                                       <p>Акция, которая позволила белорусам летом 2015 года получить кредит на сумму до 150 млн BYR.</p>
 
-                                      <p>По итогам акции было заключено договоров на общую сумму более<br> 2 млрд белорусских рублей.</p>
+                                      <p>По итогам акции было заключено договоров на общую сумму более<br> 2 млрд BYR.</p>
                                     </div>
                                   </section>
                                 </div>
