--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
   <!-- bower:css -->
   <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css" />
   <!-- endbower -->
+  <link rel="stylesheet" type="text/css" href="libs/animate/animate.css">
   <link rel="stylesheet" type="text/css" href="css/slick.css">
   <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
   <!-- endbuild -->
@@ -92,7 +93,7 @@
   </header>
 
   <div class="main-page">
-    <section class="section-page">
+    <section class="section-page section-page--our-bank">
 
       <div class="section-page__wrap-title">
         <div class="section-title">
@@ -2094,6 +2095,8 @@
   <!-- bower:js -->
   <script src="../bower_components/jquery/jquery.js"></script>
   <!-- endbower -->
+  <script type="text/javascript" src="libs/animate/animate-css.js"></script>
+  <script type="text/javascript" src="js/libs.js"></script>
   <script type="text/javascript" src="js/amcharts.js"></script>
   <script type="text/javascript" src="js/pie.js"></script>
   <script type="text/javascript" src="js/light.js"></script>
